fix(filter-multi-select): vertically center-align multi-select options

--- a/packages/select/src/FilterMultiSelect/components/MultiSelectOption/MultiSelectOption.scss
+++ b/packages/select/src/FilterMultiSelect/components/MultiSelectOption/MultiSelectOption.scss
@@ -7,7 +7,7 @@
   min-height: $spacing-lg;
   height: fit-content;
 
-  align-items: flex-start;
+  align-items: center;
   display: inline-grid;
   grid-template-columns: $spacing-md 1fr auto;
   gap: $spacing-xs;
